objects/TASKRAY__trBaseline_Task_Group__c.object
<CustomObject>
    <description>This is a TaskRay object used to store historical snapshot information on TaskRay Task Groups.</description>
    <fields>
        <fullName>TASKRAY__trActualCompletionDate__c</fullName>
        <description>Date of when the task group is completed. Works in conjunction with the Completed checkbox field.</description>
        <inlineHelpText>Date of when the task group was completed.</inlineHelpText>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualDuration__c</fullName>
        <description>Used to track the number of days that it actually took to complete the task group. Calculated as the difference between the task group Start Date and the task group Actual Completion Date.</description>
        <inlineHelpText>Number of days that it took to complete the task group.</inlineHelpText>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a task group is complete. Works in conjunction with the Actual Completion Date field to determine the duration of the task group.</description>
        <inlineHelpText>Indicates whether a task group is complete.</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletionPercentage__c</fullName>
        <label>Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEndDateVariance__c</fullName>
        <formula>IF( 
OR( 
ISBLANK(TASKRAY__trTaskGroup__r.TASKRAY__trEndDate__c), 
ISBLANK(TASKRAY__trEndDate__c) 
), 
NULL, 
TASKRAY__trTaskGroup__r.TASKRAY__trEndDate__c - TASKRAY__trEndDate__c)</formula>
        <label>End Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEndDate__c</fullName>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInitialProjectedCompletionDate__c</fullName>
        <description>This is a “behind the scenes” field that is used to track the date of when the task group is initially projected to be completed. This date will update accordingly to accommodate any scheduling changes up until the task group Start Date.</description>
        <inlineHelpText>“Behind the scenes” field. This is the date of when the task group was initially projected to be completed.</inlineHelpText>
        <label>Initial Projected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInitialProjectedDuration__c</fullName>
        <description>This is a “behind the scenes” field that is used to track the number of days between the task group Start Date and the task group Initial Projected Completion Date.</description>
        <inlineHelpText>“Behind the scenes” field. This is the duration of the task group as it was initially projected.</inlineHelpText>
        <label>Initial Projected Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trLongName__c</fullName>
        <formula>$Label.taskray__taskray_baselinetaskgroup_longname_prefix +&quot; &quot;+ TEXT(DATEVALUE(CreatedDate))+&quot;: &quot;+ TASKRAY__trTaskGroup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Group Baseline Long Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProject_Baseline__c</fullName>
        <label>Project Baseline</label>
        <referenceTo>TASKRAY__trBaseline_Project__c</referenceTo>
        <relationshipLabel>TaskRay Task Group Baselines</relationshipLabel>
        <relationshipName>TaskRay_Task_Group_Baselines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStartDateVariance__c</fullName>
        <formula>IF( 
OR( 
ISBLANK(TASKRAY__trTaskGroup__r.TASKRAY__trStartDate__c), 
ISBLANK(TASKRAY__trStartDate__c) 
), 
NULL, 
TASKRAY__trTaskGroup__r.TASKRAY__trStartDate__c - TASKRAY__trStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskGroup__c</fullName>
        <label>Task Group</label>
        <referenceTo>TASKRAY__trTaskGroup__c</referenceTo>
        <relationshipLabel>TaskRay Task Group Baselines</relationshipLabel>
        <relationshipName>TaskRay_Task_Group_Baselines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TaskRay Task Group Baseline</label>
    <nameField>
        <label>TaskRay Task Group Baseline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Task Group Baselines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>